replace new Boolean() to Boolean.valueOf()